--- a/Anchor.toml
+++ b/Anchor.toml
@@ -4,11 +4,14 @@
 seeds = false
 skip-lint = false
 
+[programs.devnet]
+stablecoin_contract = "VoamAVHGGPRL97Lntut9cxoUjbhHPdaxmmmERxeaKBW"
+
 [programs.localnet]
 stablecoin_contract = "4t9PtdHj8aedrXA4F3etpDM268kAQYbP2LTxnXUECtj3"
 
 [registry]
-url = "https://api.apr.dev"
+url = "https://devnet.helius-rpc.com/?api-key=f4cb653a-ed3a-4fab-95fc-acfab7e8a96a"
 
 [provider]
 cluster = "Localnet"
